--- a/README.org
+++ b/README.org
@@ -67,6 +67,9 @@ its content.
 
 ** Noviembre 2024
 
+*** 30-Nov-24
++ [[https://youtu.be/MHengN9q__0][Writing a small program with input and output in the Lean functional programming language]]. ~ Adolfo Neto (@adolfont.github.io). #Lean4 #FunctionalProgramming
+
 *** 29-Nov-24
 + [[https://joltml.com/ml-mathematics/][Machine learning and mathematics (The twin catalysts poised to accelerate twenty-first century mathematics: formalisation and machine learning)]]. ~ Harald Carlens. #Math #ITP #Lean4 #MachineLearning #LLMs #AIMO #AlphaProof #AlphaGeometry
 + [[https://www.isa-afp.org/entries/ILL.html][Deep embedding of intuitionistic linear logic]]. ~ Filip Smola, Jacques D. Fleuriot. #ITP #IsabelleHOL #Logic #Math
