--- a/README.org
+++ b/README.org
@@ -68,6 +68,20 @@ its content.
 
 ** Diciembre 2024
 
+*** 05-Dic-24
++ [[https://youtu.be/ar4ifBiRVoA][Lean: First steps (18 - Our Own Definition)]]. ~ Tariq Rashid (@rzeta0@mastodon.social). #ITP #LeanLang #Lean4 #Math
++ [[https://ltzhou.com/static/POPL25extended.pdf][QuickSub: Efficient iso-recursive subtyping]]. ~ Litao Zhou, Bruno C.D.S. Oliveira. #ITP #Coq #Rocq
++ [[https://arxiv.org/abs/2411.19397][Tail modulo cons, OCaml, and relational separation logic]]. ~ Clément Allain, Frédéric Bour, Basile Clément, François Pottier, Gabriel Scherer. #ITP #Coq #OCaml #FunctionalProgramming
++ [[https://www.isa-afp.org/entries/Hilbert_Space_Tensor_Product.html][The tensor product on Hilbert spaces (in Isabelle/HOL)]]. ~ Dominique Unruh. #ITP #IsabelleHOL #Math
++ [[https://www.youtube.com/live/KkKxHApYSfc][The Haskell Unfolder Episode 37: Solving Advent of Code 2024 day 4]]. ~ Edsko de Vries (@EdskoDeVries), Andres Löh (@kosmikus@functional.cafe). #Haskell #FunctionalProgramming
++ [[https://arxiv.org/abs/2411.18872][A Lean dataset for International Math Olympiad: Small steps towards writing math proofs for hard problems]]. ~ Roozbeh Yousefzadeh, Xuenan Cao. #LLMs #ITP #LeanLang #Lean4 #Math
++ [[https://arxiv.org/abs/2411.19744][Amplifying human performance in combinatorial competitive programming]]. ~ Petar Veličković, Alex Vitvitskyi, Larisa Markeeva, Borja Ibarz, Lars Buesing, Matej Balog, Alexander Novikov. #AI #LLMs #Math
++ [[https://www.ntnu.no/ojs/index.php/nikt/article/view/6205/5630][OnlineProver: First experience with teaching formal proofs]]. ~ Joachim Kristensen et als. #Logic #Teaching
+
+*** 04-Dic-24
++ [[https://arxiv.org/abs/2412.01671][Verified foundations for differential privacy]]. ~ Markus de Medeiros et als. #ITP #LeanLang
++ [[https://arxiv.org/abs/1407.2650v3][Logic and linear algebra: An introduction]]. ~ Daniel Murfet. #Logic #Math
+
 *** 03-Dic-24
 + [[https://youtu.be/qF8gcKh8IFA][Lean: First steps (17 - Using our own lemma)]]. ~ Tariq Rashid (@rzeta0@mastodon.social). #ITP #Lean4 #Math
 + [[https://nantes-universite.hal.science/hal-04801739/file/main.pdf][All your base are belong to U^s (Sort polymorphism for proof assistants)]]. ~ Josselin Poiret, Gaëtan Gilbert, Kenji Maillard, Pierre-Marie Pédrot, Matthieu Sozeau, Nicolas Tabareau, Éric Tanter. #ITP #CoqLang #Rocq
