--- a/README.org
+++ b/README.org
@@ -68,6 +68,12 @@ its content.
 
 ** Diciembre 2024
 
+*** 11-Dic-24
++ [[https://ceur-ws.org/Vol-3860/paper_6.pdf][Isomorphic transfer infrastructure for nested types in Isabelle/HOL (Work in progress)]]. ~ Gergely Buday, Andrei Popescu. #ITP #IsabelleHOL
++ [[https://cdsmithus.medium.com/when-is-a-call-stack-not-a-call-stack-f7f12d7aabbe][When is a call stack not a call stack?]] ~ Chris Smith. #Haskell #FunctionalProgramming
++ [[https://arxiv.org/abs/2412.07325][Gödel's program in set theory]]. ~ Sandra Müller, Grigor Sargsyan. #Logic #Math #SetTheory
++ [[https://arxiv.org/abs/2201.04352][Constructive theory of ordinals]]. ~ Thierry Coquand, Henri Lombardi, Stefan Neuwirth. #Logic #Math #SetTheory
+
 *** 10-Dic-24
 + [[https://www.philipzucker.com/ljt/][Dyckhoff intuitionistic propositional prover]]. ~ Philip Zucker (@sandmouth.bsky.social). #Logic #SMT #Z3 #Python
 + [[https://arxiv.org/abs/2412.04110][Enhancing mathematical reasoning in LLMs with background operators]]. ~ Jiajun Chen, Yik-Cheung Tam. #LLMs #Prolog #LogicProgramming
