--- a/README.org
+++ b/README.org
@@ -68,6 +68,11 @@ its content.
 
 ** Diciembre 2024
 
+*** 13-Dic-24
++ [[https://ssrg.ece.vt.edu/papers/popl25.pdf][On extending incorrectness logic with backwards reasoning]]. ~ Freek Verbeek, Md Syadus Sefat, Zhoulai Fu, Binoy Ravindran. #ITP #IsabelleHOL
++ [[https://arxiv.org/abs/2412.04864][Machine checked proofs and programs in algebraic combinatorics]]. ~ Florent Hivert. #ITP #Coq #Rocq #Math
++ [[https://philarchive.org/archive/FITUOI][Univocity of intuitionistic and classical connectives]]. ~ Rodolfo C. Ertola-Biraben, Branden Fitelson. #ATP #Prover9 #Mace4 #Logic #Math
+
 *** 12-Dic-24
 + [[https://xenaproject.wordpress.com/2024/12/11/fermats-last-theorem-how-its-going/][Fermat’s Last Theorem — how it’s going]]. ~ Kevin Buzzard (@xenaproject.bsky.social). #ITP #LeanLang #Lean4 #Math
 
