--- a/README.org
+++ b/README.org
@@ -68,6 +68,14 @@ its content.
 
 ** Diciembre 2024
 
+*** 16-Dic-24
++ [[https://leanfirststeps.blogspot.com/2024/12/19-reductio-ad-absurdum.html][Lean: First steps (19 - Reductio ad absurdum)]]. ~ Tariq Rashid (@rzeta0@mastodon.social). #ITP #LeanLang #Lean4 #Math
++ [[https://www.cambridge.org/core/journals/journal-of-functional-programming/article/bottomup-computation-using-trees-of-sublists/5FC308F9732880B018C841EA424B09FA][Bottom-up computation using trees of sublists]]. ~ Shin-Cheng Mu. #Haskell #FunctionalProgramming
++ [[https://www.philipzucker.com/knuckle_lemma/]['Lean-style' tactics in Knuckledragger]]. ~ Philip Zucker (@sandmouth.bsky.social). #Logic #SMT #Z3 #Python
++ [[https://www.cambridge.org/core/journals/journal-of-functional-programming/article/an-example-of-goaldirected-calculational-proof/A20D6BD38245A04263684CFDC5375C0D][An example of goal-directed, calculational proof]]. ~ Roland Carl Backhouse, Walter Guttmann, Michael Winter. #Logic
++ [[https://www.p-cos.net/lisp/guide.html][Pascal Costanza's Highly Opinionated Guide to Lisp]]. ~ Pascal Costanza. #CommonLisp #Programming
++ [[https://arxiv.org/abs/2412.10673][Proposing and solving olympiad geometry with guided tree search]]. ~ Chi Zhang et als. #AI #Math
+
 *** 15-Dic-24
 + [[https://link.springer.com/book/10.1007/978-3-031-68538-5][Category theory using Haskell (An introduction with Moggi and Yoneda)]]. ~ Shuichi Yukita. #Haskell #FunctionalProgramming #CategoryTheory
 + [[https://youtu.be/Zu2oET6Xjow][The future of Math with o1 reasoning with Terence Tao, Mark Chen, and James Donovan]]. #AI #ITP #LeanProver #Math
